Trip Planner updated to lunch time

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
     <title>Trip Planner</title>
     <link rel="stylesheet" href="./style.css"></link>
     <script src="./bundle.js" defer></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
   </head>
   <body>
     <div id="map"></div>
+    <img id="marker1" src ="https://www.chargrilled.us/t-shirts/prodimages/staticimages/square/m0mapmarkergo_m_White.jpg">
   </body>
 </html>
